GPSHUB_EXPORT = \
hubthread/CoordsBroadcastThread.h \
hubthread/CoordsUpdateThread.h \
hubthread/ServerThread.h \
log/log.h \
log/macros.h \
server/CmdPkg.h \
server/CommandHandler.h \
server/CommandServer.h \
server/GpsDataServer.h \
server/Server.h \
server/Session.h \
socket/EpollException.h \
socket/Epoll.h \
socket/netutil.h \
socket/SocketException.h \
socket/Socket.h \
thread/BlockingQueue.h \
thread/ConditionVariable.h \
thread/Mutex.h \
thread/RwLock.h \
thread/ScopeLock.h \
thread/ScopeLockRd.h \
thread/ScopeLockWr.h \
thread/SyncHashMap.h \
thread/SyncHashSet.h \
thread/SyncMap.h \
thread/SyncSet.h \
thread/ThreadException.h \
thread/Thread.h \
thread/ThreadSyncException.h \
user/Coordinates.h \
user/dstypes.h \
user/User.h \
user/UserIdGenerator.h \
util/CircularBuffer.h \
util/hashmaphelper.h

EXTRA_SRC = $(GPSHUB_EXPORT)

noinst_HEADERS = $(GPSHUB_EXPORT)

